MeetingStoryForm fix scrollbar

--- a/src/components/EventInProfile/EventsInProfile.scss
+++ b/src/components/EventInProfile/EventsInProfile.scss
@@ -9,7 +9,7 @@ overflow-x: hidden;
   list-style: none;
   padding: 5px 0;
   margin: 0 ;
-  scrollbar-width: none;
+  scrollbar-width: 5px;
   &::-webkit-scrollbar {
     width: 5px;
   }
